...
  val wasSaved by inputViewModel.wasSaved.collectAsState()
  val totalIngredients by inputViewModel.totalIngredientEntriesDisplayed.collectAsState()
  LazyColumn(modifier = modifier.testTag("LazyList")) {
    this.items(totalIngredients) { index ->
      val movableContent = movableContentOf {
...
          horizontalArrangement = Arrangement.Start) {
            IconButton(
                modifier = Modifier.testTag("SaveButton"),
                onClick = { inputViewModel.saveInFridge() }) {
                  Icon(
...
                }
            IconButton(
                modifier = Modifier.testTag("ReloadButton"),
                onClick = { inputViewModel.loadFridge() }) {
                  Icon(Icons.Filled.Refresh, contentDescription = "Reload")
                }
            IconButton(
                modifier = Modifier.testTag("TrashButton"),
                onClick = { inputViewModel.resetList() }) {
                  Icon(Icons.Filled.Delete, contentDescription = "Trash")
...
          Row(modifier = Modifier.fillMaxWidth().padding(top = 8.dp)) {
            // Ingredients Box
            Box(modifier = Modifier.weight(1.5f).height(60.dp).testTag("IngredientsBox")) {
              OutlinedTextField(
                  colors = colorOfInputBoxes(isBeingUsed),
...
                  singleLine = true,
                  modifier =
                      Modifier.fillMaxWidth().padding(end = 0.dp).testTag("IngredientsInput"),
                  placeholder = { Text(text = "...") },
                  label = {
...
                filteredIngredients.forEach { item ->
                  DropdownMenuItem(
                      modifier = Modifier.testTag("IngredientOption"),
                      text = { Text(text = item.name) },
                      onClick = {
...
                }
                DropdownMenuItem(
                    modifier = Modifier.background(Color.LightGray).testTag("AddOption"),
                    text = { Text(text = "Add Ingredient") },
                    onClick = {
...
              Spacer(modifier = Modifier.width(8.dp))
              IconButton(
                  modifier = Modifier.padding(top = 4.dp).testTag("CheckIconButton"),
                  onClick = {
                    if (inputViewModel.isCompleteIngredient(
...
                    },
                    singleLine = true,
                    modifier = Modifier.weight(1f).height(60.dp).testTag("QuantityInput"),
                    placeholder = { Text(text = "...") },
                    label = {
...
                var expanded by remember { mutableStateOf(false) }
                ExposedDropdownMenuBox(
                    modifier = Modifier.weight(1f).height(60.dp).testTag("DoseBox"),
                    expanded = expanded,
                    onExpandedChange = { expanded = !expanded }) {
...
                          onValueChange = {},
                          label = { Text("Dose") },
                          modifier = Modifier.menuAnchor().testTag("DoseInput"))
                      ExposedDropdownMenu(
                          modifier = Modifier.height(120.dp),
...
        }
  }
  HorizontalDivider(modifier = Modifier.padding(top = 4.dp).testTag("IngredientDivider"))
}

...
    Spacer(modifier = Modifier.width(8.dp))
    IconButton(
        modifier = Modifier.testTag("DeleteIconButton"),
        onClick = {
          action(
...
                  MaterialTheme.typography.bodyLarge.copy(
                      fontStyle = FontStyle.Italic, fontSize = 18.sp, fontWeight = FontWeight.Bold),
              modifier = Modifier.padding(bottom = 4.dp).testTag("IngredientName"))
          Text(
              text = "$quantity $dose",
...
                  MaterialTheme.typography.bodyMedium.copy(
                      fontStyle = FontStyle.Italic, fontSize = 16.sp, color = Color.Gray),
              modifier = Modifier.testTag("Quantity&Dose"))
        }
        Row(
            horizontalArrangement = Arrangement.End,
            verticalAlignment = Alignment.CenterVertically) {
              IconButton(modifier = Modifier.testTag("ModifyIconButton"), onClick = { onClick() }) {
                Icon(
                    imageVector = Icons.Outlined.ModeEdit,
...
