...
 *
 * @param unitString The string representation of the measure unit.
 * @return The corresponding [MeasureUnit] enum value.
 */
fun getMeasureUnitFromString(unitString: String): MeasureUnit {
  return when (unitString.lowercase()) {
    "teaspoon",
    "tsp",
    "teaspoons" -> MeasureUnit.TEASPOON
    "tablespoon",
    "tbsp",
    "tablespoons" -> MeasureUnit.TABLESPOON
    "cup",
...
